changed the starting time in index.html

--- a/index.html
+++ b/index.html
@@ -109,24 +109,11 @@
   const ACTIVE_WINDOW_MINUTES = 2;
 
   const rares = [
-    "Redeye the Skullchewer",
-    "T'aavihan the Unbound",
-    "Ray of Putrescence",
-    "Ix the Bloodfallen",
-    "Commander Ix'vaarha",
-    "Sharfadi, Bulwark of the Night",
-    "Ez'Haadosh the Liminality",
-    "Berg the Spellfist",
-    "Corla, Herald of Twilight",
-    "Void Zealot Devinda",
-    "Asira Dawnslayer",
-    "Archbishop Benedictus",
-    "Nedrand the Eyegorger",
-    "Executioner Lynthelma",
-    "Gustavan, Herald of the End",
-    "Voidclaw Hexathor",
-    "Mirrorvise",
-    "Saligrum the Observer"
+    "Redeye the Skullchewer","T'aavihan the Unbound","Ray of Putrescence","Ix the Bloodfallen",
+    "Commander Ix'vaarha","Sharfadi, Bulwark of the Night","Ez'Haadosh the Liminality",
+    "Berg the Spellfist","Corla, Herald of Twilight","Void Zealot Devinda","Asira Dawnslayer",
+    "Archbishop Benedictus","Nedrand the Eyegorger","Executioner Lynthelma",
+    "Gustavan, Herald of the End","Voidclaw Hexathor","Mirrorvise","Saligrum the Observer"
   ];
 
   const anchorSelect = document.getElementById("anchorRare");
@@ -142,31 +129,22 @@
   });
   anchorSelect.value = "Nedrand the Eyegorger";
 
-  const fmtTime = new Intl.DateTimeFormat(undefined, {
-    hour: "numeric",
-    minute: "2-digit",
-    hour12: true
-  });
+  const fmtTime = new Intl.DateTimeFormat(undefined, { hour: "numeric", minute: "2-digit", hour12: true });
 
   function minutes(ms){ return ms / 60000; }
 
   function parseTimeOnly12h(s){
     const m = /^(\d{1,2}):(\d{2})\s*(AM|PM)$/i.exec((s || "").trim());
     if (!m) return null;
-
     let h = parseInt(m[1], 10);
     const min = parseInt(m[2], 10);
     const ap = m[3].toUpperCase();
-
-    if (ap === "AM") { if (h === 12) h = 0; }
-    else { if (h !== 12) h += 12; }
-
+    if (ap === "AM") { if (h === 12) h = 0; } else { if (h !== 12) h += 12; }
     return { hour24: h, minute: min };
   }
 
   function formatTimeOnly12h(hour24, minute){
-    const d = new Date(2000,0,1,hour24,minute,0);
-    return fmtTime.format(d);
+    return fmtTime.format(new Date(2000,0,1,hour24,minute,0));
   }
 
   function snapDownTo10(timeObj){
@@ -175,11 +153,12 @@
 
   function setAnchorTimeToNowSnapped(){
     const now = new Date();
-    const snappedM = Math.floor(now.getMinutes() / 10) * 10;
-    anchorTimeInput.value = formatTimeOnly12h(now.getHours(), snappedM);
+    anchorTimeInput.value = formatTimeOnly12h(now.getHours(), Math.floor(now.getMinutes()/10)*10);
   }
 
-  function setDefaultAnchorTime(){ anchorTimeInput.value = "4:50 PM"; }
+  function setDefaultAnchorTime(){
+    setAnchorTimeToNowSnapped(); // SMART DEFAULT
+  }
 
   function buildAnchorBaseToday(timeOnly){
     const now = new Date();
@@ -188,10 +167,8 @@
 
   function humanRemaining(mins){
     if (mins <= 0 && mins >= -ACTIVE_WINDOW_MINUTES) return "ACTIVE";
-    const sec = Math.max(0, Math.round(mins * 60));
-    const m = Math.floor(sec / 60);
-    if (m < 60) return `${m} min`;
-    return `${Math.floor(m/60)}h ${m%60}m`;
+    const m = Math.floor(Math.max(0, mins));
+    return m < 60 ? `${m} min` : `${Math.floor(m/60)}h ${m%60}m`;
   }
 
   function cycleMinutes(){ return rares.length * ROTATION_MINUTES; }
@@ -206,74 +183,52 @@
   }
 
   function render(){
-    const anchorName = anchorSelect.value;
-    const anchorIndex = rares.indexOf(anchorName);
-
+    const anchorIndex = rares.indexOf(anchorSelect.value);
     let t = parseTimeOnly12h(anchorTimeInput.value);
     if (anchorIndex < 0 || !t){
       tbody.innerHTML = `<tr><td colspan="3"><b>Invalid anchor time.</b></td></tr>`;
-      statusLine.textContent = "";
       return;
     }
 
     const snapped = snapDownTo10(t);
     anchorTimeInput.value = formatTimeOnly12h(snapped.hour24, snapped.minute);
-
     const anchorBase = buildAnchorBaseToday(snapped);
     const now = new Date();
 
     const rows = rares.map((rare, idx) => {
-      const offsetSteps = idx - anchorIndex;
-      const base = new Date(anchorBase.getTime() + offsetSteps * ROTATION_MINUTES * 60000);
-
+      const base = new Date(anchorBase.getTime() + (idx - anchorIndex) * ROTATION_MINUTES * 60000);
       const { last, next } = computeLastAndNext(base, now);
-
-      const sinceLastMin = minutes(now - last);
-      const untilNextMin = minutes(next - now);
-      const isActive = (sinceLastMin >= 0 && sinceLastMin <= ACTIVE_WINDOW_MINUTES);
-
-      const sortKey = isActive ? -1 : untilNextMin;
-      const displayTime = isActive ? last : next;
-      const remainingForDisplay = isActive ? -sinceLastMin : untilNextMin;
-
-      return { rare, isActive, sortKey, displayTime, remainingForDisplay };
-    });
-
-    rows.sort((a, b) => a.sortKey - b.sortKey);
+      const sinceLast = minutes(now - last);
+      const untilNext = minutes(next - now);
+      const isActive = sinceLast >= 0 && sinceLast <= ACTIVE_WINDOW_MINUTES;
+      return {
+        rare,
+        isActive,
+        displayTime: isActive ? last : next,
+        remaining: isActive ? -sinceLast : untilNext
+      };
+    }).sort((a,b)=> (a.isActive? -1:a.remaining) - (b.isActive? -1:b.remaining));
 
     tbody.innerHTML = "";
-    rows.forEach(r => {
+    rows.forEach(r=>{
       const tr = document.createElement("tr");
-      if (r.isActive) tr.className = "activeRow";
-
-      const tdName = document.createElement("td");
-      tdName.textContent = r.rare;
-      if (r.isActive){
-        const badge = document.createElement("span");
-        badge.className = "badge";
-        badge.textContent = "ACTIVE";
-        tdName.appendChild(badge);
-      }
-
-      const tdTime = document.createElement("td");
-      tdTime.textContent = fmtTime.format(r.displayTime);
-
-      const tdRemain = document.createElement("td");
-      tdRemain.textContent = humanRemaining(r.remainingForDisplay);
-
-      tr.appendChild(tdName);
-      tr.appendChild(tdTime);
-      tr.appendChild(tdRemain);
+      if(r.isActive) tr.className="activeRow";
+      const td1=document.createElement("td");
+      td1.textContent=r.rare;
+      if(r.isActive){ const b=document.createElement("span"); b.className="badge"; b.textContent="ACTIVE"; td1.appendChild(b);}
+      const td2=document.createElement("td"); td2.textContent=fmtTime.format(r.displayTime);
+      const td3=document.createElement("td"); td3.textContent=humanRemaining(r.remaining);
+      tr.append(td1,td2,td3);
       tbody.appendChild(tr);
     });
   }
 
-  document.getElementById("refreshBtn").onclick = render;
-  document.getElementById("setNowBtn").onclick = () => { setAnchorTimeToNowSnapped(); render(); };
+  document.getElementById("refreshBtn").onclick=render;
+  document.getElementById("setNowBtn").onclick=()=>{setAnchorTimeToNowSnapped();render();};
 
   setDefaultAnchorTime();
   render();
-  setInterval(render, 1000);
+  setInterval(render,1000);
 })();
 </script>
 </body>
