--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>WoW Rare Spawn Timer</title>
+<title>WoW Twilight Ascension Spawn Timer</title>
 
 <style>
   body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 24px; }
@@ -233,3 +233,4 @@
 </script>
 </body>
 </html>
+
