--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-<h1>WoW Rare Spawn Timer</h1>
+<h1>WoW Twilight Ascension Rare Spawn Timer</h1>
 <p class="sub">10-minute rotation. Sorted by soonest spawn.</p>
 
 <div class="anchorRow">
@@ -233,4 +233,5 @@
 </script>
 </body>
 </html>
+
 
