update title again

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <div class="card">
         <div class="headerRow">
             <div>
-                <h1>WoW Rare Spawn Timer</h1>
+                <h1>WoW Twilight Ascension Rare Spawn Timer</h1>
                 <p class="sub">10-minute rotation. Sorted by soonest spawn.</p>
             </div>
             <button class="themeBtn" id="toggleThemeBtn" title="Toggle theme">🌙 Night mode</button>
@@ -664,3 +664,4 @@
     </script>
 </body>
 </html>
+
