--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   <div class="card">
     <div class="headerRow">
       <div>
-        <h1>WoW Rare Spawn Timer</h1>
+        <h1>WoW Twilight Ascension Spawn Timer</h1>
         <p class="sub">10-minute rotation. Sorted by soonest spawn.</p>
       </div>
       <button class="themeBtn" id="toggleThemeBtn" title="Toggle theme">🌙 Night mode</button>
@@ -549,3 +549,4 @@
 </script>
 </body>
 </html>
+
